apps/base/maker/bambubuddy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bambubuddy-service
spec:
  selector:
    app: bambubuddy-deployment
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
