apps/base/maker/bambubuddy/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bambubuddy
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bambubuddy.local.${DOMAIN}`)
      kind: Rule
      services:
        - name: bambubuddy-service
          port: 8000
  tls:
    certResolver: letsencrypt
